# ErrorMux

./: .coverage  .gitignore  CLAUDE.md  DEMO-RECORDING.md  LICENSE  README.md  errormux.plugin.zsh  install.sh  pyproject.toml  uninstall.sh
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/phases/01-capture-layer/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-cli-ollama-core/: 02-01-SUMMARY.md  02-02-PLAN.md  02-DISCUSSION-LOG.md  02-UAT.md  02-VALIDATION.md
.planning/phases/03-cache-system/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-DISCUSSION-LOG.md  03-RESEARCH.md  03-VALIDATION.md
.planning/phases/04-skip-list-filtering/: 04-01-PLAN.md  04-02-SUMMARY.md  04-UAT.md
.planning/phases/05-installation/: 05-01-PLAN.md  05-CONTEXT.md
.planning/phases/06-testing/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-CONTEXT.md  06-DISCUSSION-LOG.md  06-RESEARCH.md  06-VERIFICATION.md
.planning/phases/09-packaging/: 09-01-SUMMARY.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-DISCUSSION-LOG.md
.planning/phases/10-github-polish/: 10-01-LICENSE.md  10-03-DEMO.md  10-CONTEXT.md  10-SUMMARY.md
.planning/phases/7-widget-auto-return-fix/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md
.planning/phases/8-model-switch/: 08-02-SUMMARY.md
.planning/quick/260415-q0k-fix-offline-graceful-degradation-blocker/: 260415-q0k-PLAN.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/errormux/: __init__.py  cache.py  cli.py  client.py  config.py  parser.py  prompts.py  skip.py
tests/: conftest.py  test_cache.py  test_cli.py  test_client.py  test_parser.py  test_prompts.py  test_skip.py
(+28 files in other folders)
