[project]
name = "errormux"
version = "0.1.0"
description = "zsh plugin for on-demand shell command error explanations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15",
    "rich>=14.0",
    "ollama>=0.6.1",
]

[project.scripts]
errormux = "errormux.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/errormux"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
]
